# agent-chaos-vm

agent-chaos/: .gitignore  main.py  pyproject.toml
agent-chaos/src/agents/: agent.py  brain.py  personality.py
agent-chaos/src/bridge/: discord.py  ssh.py
agent-chaos/src/communication/: agora.py
agent-chaos/src/utils/: config.py  interact.py  logger.py  monitor.py  scraper.py  service_monitor.py
